--- a/views/stock_price.erb
+++ b/views/stock_price.erb
@@ -1,6 +1,7 @@
 <div class = "wrapper">
 <div class= "header"><p class="name-result"><%= @name %></p>
 <p class="buy-result">$<%= @buy%></p>
+<p class=""><%= @percent_change%></p>
 </div>
 
 <div id='chart'>
