--- a/views/stock_price.erb
+++ b/views/stock_price.erb
@@ -1,14 +1,26 @@
+<body class="<%= @bgcolor %>"> 
+
 <div class = "wrapper">
 <div class= "header"><p class="name-result"><%= @name %></p>
+
 <p class="buy-result">$<%= @buy%></p>
-<p class=""><%= @percent_change%></p>
 </div>
 
-<div id='chart'>
+<div class='chart'>
 
     <%= line_chart( @history, discrete: true, library:{ backgroundColor:'none', colors: ['white'], hAxis: {direction: '-1',textPosition: 'none', gridlines: {color:'transparent'}},
                  vAxis: {viewWindowMode: 'pretty',textPosition: 'none', gridlines: {color:'transparent'} } }  ) %>
+  </div>   
+<h3 class="pe_ratio"><%= @peInd %></h3>
+<div class='chart'>
+     <%= column_chart( @pe, discrete: true, library:{ backgroundColor:'none', colors: ['white'], hAxis: {direction: '-1',textPosition: 'none', gridlines: {color:'transparent'}},
+                 vAxis: {viewWindowMode: 'pretty',textPosition: 'none', gridlines: {color:'transparent'} } }  ) %>
 </div>
+
+<span>Target Price</span>
+<h3 class="target_price">$<%= @target_price %></h3>
+<p>Wall Street's Recommendation is <span class="wall"><%= @wallstreet%></span></p>
 <button type="button" class="submit-btn" ><a href ="/">Check another stock </a></button>
 
 </div>
+</body>
