--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,19 +21,28 @@
 .pc-result {
     float: left;
 }
-body.yellow{
+.yellow {
+   background-color:#F9BF3B;
+}
+.red{
+    background-color:#C0392B;
+}
+
+/*body.yellow{
     background-color:#F9BF3B;
 }
 body.red{
     background-color:#C0392B;
 
-}
+}*/
 body{
     background-color:#00B16A;
     font-family: 'Lato', sans-serif;
-    color:#FFF;
+   
 }
-
+.msg {
+  color: #FFF;
+}
 .ticker{
     margin-top:50px;
     text-align:center;
